samples/_failures_safe/1761503883_4f60bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd288982.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_dd288982.c:178:33: error: expected ‘;’ at end of input
  178 |         token.value[0] = current
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_dd288982.c:178:9: error: expected declaration or statement at end of input
  178 |         token.value[0] = current
      |         ^~~~~
./samples/SAFE/__tmp_dd288982.c:178:9: error: expected declaration or statement at end of input
